gke/k8s-resources/manifests/05-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: vote-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Disable HTTP to HTTPS redirect (since no SSL yet)
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: vote.armin.hs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.armin.hs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
